# Trajectory-MPC

./: .gitignore  CMakeLists.txt  MPC.cpp  MPC.hpp  README.md  main.cpp  simulation.cpp
